<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="last_time_of_update_key" translatable="false">last_time_of_update_key</string>
    <string name="last_time_of_update">Last time of update</string>
    <string name="update_interval">Update interval</string>
    <string name="choose_city_manually">Choose city manually</string>
    <string name="current_city">Current city</string>
    <string name="settings">Settings</string>
    <string name="forecast">Forecast</string>
    <string name="today">Today</string>
    <string name="update_settings_title">Update</string>
    <string name="share">Share</string>
    <string name="at">at</string>
    <string name="m_s">" m/s"</string>
    <string name="m_m">" mm"</string>
    <string name="h_Pa">" hPa"</string>
    <string name="precip_def_value">"0 mm"</string>
    <string name="precip_per_hour">"mm per hour"</string>
    <string name="precip_per_3hour">mm per 3 hours</string>
    <string name="app_uses_geolocation">App uses geolocation and needs your permission. Rerun app for correct work! Or navigate to settings and choose your city manually.</string>
    <string name="turn_on_location_service">Turn location service on and rerun application or choose your city in settings manually</string>
    <string name="seems_no_internet_connection">Seems no internet Connection!</string>
    <string name="data_updated">Data updated successfully!</string>
    <string name="not_valid_city_or_no_internet">Not valid city or no Internet Connection!</string>
    <string name="city_not_set">city not set</string>
    <string name="city">City: </string>
    <string name="temperature">Temperature: </string>
    <string name="humidity">Humidity: </string>
    <string name="wind_speed">Wind speed: </string>
    <string name="updating">Updating</string>
    <string name="now">Now</string>
    <string name="log">Log</string>


</resources>
