<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/update_settings_title">

        <Preference
            app:key="@string/last_time_of_update_key"
            app:title="@string/last_time_of_update" />

        <ListPreference
            app:entries="@array/update_interval_names"
            app:entryValues="@array/update_interval_values"
            app:key="update_interval_key"
            app:title="@string/update_interval"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="switch_pref_city"
            app:title="@string/choose_city_manually" />
        <EditTextPreference
            app:key="update_by_city_key"
            app:title="@string/current_city" />

    </PreferenceCategory>


</PreferenceScreen>
